--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ name = "PyPI"
 priority = "primary"
 
 [tool.poetry.dependencies]
-python = "~3.10"  # Scipy became a bit picky (check again later)
+python = "~3.10"
 numpy = "^1.22.3"
 calendra = "^7.9.0"
 pytz = "^2024.1"
